--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.3.4",
+    "@astrojs/tailwind": "^5.0.4",
+    "@fontsource-variable/fira-code": "^5.0.16",
+    "@fontsource-variable/open-sans": "^5.0.21",
     "astro": "^4.0.7",
+    "astro-icon": "^1.0.0",
+    "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3"
   }
 }
