--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fontsource-variable/open-sans": "^5.0.21",
     "astro": "^4.0.7",
     "astro-icon": "^1.0.0",
+    "date-fns": "^3.0.6",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3"
   }
