--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.3.4",
+    "@astrojs/partytown": "^2.0.3",
     "@astrojs/sitemap": "^3.0.4",
     "@astrojs/tailwind": "^5.0.4",
     "@fontsource-variable/jetbrains-mono": "^5.0.19",
