--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.3.4",
-    "@astrojs/sitemap": "^3.0.4",
-    "@astrojs/tailwind": "^5.0.4",
-    "@fontsource-variable/jetbrains-mono": "^5.0.19",
-    "@fontsource-variable/open-sans": "^5.0.21",
-    "astro": "^4.0.7",
-    "astro-icon": "^1.0.0",
-    "date-fns": "^3.0.6",
-    "tailwindcss": "^3.4.0",
-    "typescript": "^5.3.3"
+    "@astrojs/check": "0.5.10",
+    "@astrojs/sitemap": "3.1.3",
+    "@astrojs/tailwind": "5.1.0",
+    "@astrojs/upgrade": "0.3.0",
+    "@fontsource-variable/jetbrains-mono": "5.0.20",
+    "@fontsource-variable/open-sans": "5.0.28",
+    "astro": "4.6.2",
+    "astro-icon": "1.1.0",
+    "date-fns": "3.6.0",
+    "tailwindcss": "3.4.3",
+    "typescript": "5.4.5"
   }
 }
